# data_quality

./: README.md  inferred_schema.py  mkdocs.yml  pyproject.toml
app/: etl.py  funcao.py  schema.py
data/: contrato.csv
data_quality/: pyproject.toml
docs/: index.md
exemplo/: data.py
test/: test_funcao_etl.py  test_funcao_ola_mundo.py
